fixed selected colored edges not showing selection

--- a/src/Components/grapheditor/GraphEditor.css
+++ b/src/Components/grapheditor/GraphEditor.css
@@ -117,7 +117,7 @@
     stroke-width: 2px;
 }
 .react-flow__edge.selected>.react-flow__edge-path {
-    stroke:var(--color-alert-trans);
+    stroke:var(--color-alert-trans) !important;
 }
 
 .react-flow__handle {
